reports are working
